--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,8 +1,7 @@
 {
   "name": "budget_tracker",
   "short_name": "budget_tracker",
-  "icons": [
-    {
+  "icons": [{
       "src": "./img/icons/android-chrome-192x192.png",
       "sizes": "192x192",
       "type": "image/png"
@@ -13,7 +12,7 @@
       "type": "image/png"
     }
   ],
-  "start_url": "./index.html",
+  "start_url": "./",
   "display": "standalone",
   "background_color": "#000000",
   "theme_color": "#4DBA87"
